--- a/assets/styles/reset/_root.scss
+++ b/assets/styles/reset/_root.scss
@@ -26,6 +26,8 @@ html,
 body,
 #__nuxt {
   height: 100%;
+  background-color: var(--color-surface);
+  color: var(--color-on-surface);
 }
 html {
   background-color: white;
